@@ -361,7 +361,7 @@ static const canon_cap_t canon_model_capabilities[] =
     10, 10, 15, 15,
     &canon_MULTIPASS_MP170_slotlist,
     CANON_CAP_STD0|CANON_CAP_I|CANON_CAP_p,0,control_cmd_BJC_i6100,
-    &canon_S500_modelist,
+    &canon_BJC_S500_modelist,
     &canon_BJC_S300_paperlist,
     NULL,
     NULL,
@@ -374,7 +374,7 @@ static const canon_cap_t canon_model_capabilities[] =
     10, 10, 15, 15,
     &canon_MULTIPASS_MP170_slotlist,
     CANON_CAP_STD0|CANON_CAP_I|CANON_CAP_px,0,control_cmd_BJC_i6100,
-    &canon_S520_modelist,
+    &canon_BJC_S520_modelist,
     &canon_BJC_S520_paperlist,
     NULL,
     NULL,
@@ -389,6 +389,19 @@ static const canon_cap_t canon_model_capabilities[] =
     CANON_CAP_STD0|CANON_CAP_I|CANON_CAP_p,0,control_cmd_BJC_i6100,
     &canon_BJC_S600_modelist,
     &canon_BJC_S300_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    NULL
+  },
+  { /* Canon BJC S750 */
+    "S750", 3,
+    842, 17*72,
+    11, 9, 10, 18,
+    &canon_MULTIPASS_MP170_slotlist,
+    CANON_CAP_STD0|CANON_CAP_I|CANON_CAP_px,0,control_cmd_BJC_i550,
+    &canon_BJC_S750_modelist,
+    &canon_BJC_S750_paperlist,
     NULL,
     NULL,
     NULL,
